Be less aggressive about setting timeout during HTTPSOnly https://bugs.webkit.org/show_bug.cgi?id=254640 rdar://107074579

Reviewed by Alex Christensen.

In the first iteration, we set a 3 second timeout interval on the request when
the HTTPSOnly policy is enabled. The 3 second timeout is a little too
aggressive, and that timeout is also currently set on all requests instead of
only main resource loads. This change now reduces the scope where the timeout
is set, and increases the timeout to 10 seconds based on some experience.

* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::upgradeRequestforHTTPSOnlyIfNeeded const):
* Source/WebKit/NetworkProcess/cocoa/NetworkDataTaskCocoa.mm:
(WebKit::NetworkDataTaskCocoa::NetworkDataTaskCocoa):

Canonical link: https://commits.webkit.org/262678@main